[project]
name = "nalia-tester"
version = "1.0.0"
description = "Streamlit dialer for testing the Nalia voice agent via LiveKit dispatch"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-api>=1.0",
    "python-dotenv",
    "streamlit~=1.40",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"