[project]
name = "nalia-tester"
version = "1.0.0"
description = "Streamlit dialer for testing the Nalia voice agent via LiveKit dispatch"
requires-python = ">=3.10, <3.15"

dependencies = [
    "bcrypt>=4.0.0",
    "livekit-api>=1.0",
    "python-dotenv",
    "streamlit~=1.40",
    "streamlit-authenticator>=0.4.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
